--- a/vmes-server/src/main/resources/application-dev.yml
+++ b/vmes-server/src/main/resources/application-dev.yml
@@ -20,7 +20,8 @@ spring:
 
   redis:
     key_prefix: vmes
-    host: 127.0.0.1
+    host: 47.93.44.177
     port: 6379
+    password: riw11119owow
 
 ui-path: file:./vmes-file
