--- a/yvan-platform/build.gradle
+++ b/yvan-platform/build.gradle
@@ -48,6 +48,13 @@ dependencies {
     compile 'com.auth0:java-jwt:3.2.0'
     compile 'net.coobird:thumbnailator:0.4.8'
     compile 'org.projectlombok:lombok:1.16.8'
+
+
+    compile 'org.apache.poi:poi:3.17'
+    compile 'org.apache.poi:poi-ooxml-schemas:3.17'
+    compile 'org.apache.poi:poi-ooxml:3.17'
+
+    compile 'itext:itext:4.2.0'
 }
 
 artifacts {
