application.yml db-type

--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -68,6 +68,7 @@ mybatis-plus:
     id-type: 2
     field-strategy: 2
     db-column-underline: true
+    refresh-mapper: false
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
