--- a/vmes-server/src/main/resources/application-dev.yml
+++ b/vmes-server/src/main/resources/application-dev.yml
@@ -23,5 +23,7 @@ spring:
     host: 47.93.44.177
     port: 6379
     password: riw11119owow
+    timeout: 0
+    expire: 18000
 
 ui-path: file:./vmes-file
