--- a/yvan-platform/build.gradle
+++ b/yvan-platform/build.gradle
@@ -30,10 +30,9 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-redis'
     compile 'org.springframework.boot:spring-boot-starter-aop'
 
-    compile 'com.baomidou:mybatis-plus-boot-starter:2.2.0'
-    compile 'com.baomidou:mybatis-plus-support:2.2.0'
-    compile 'com.alibaba:druid:1.1.2'
-    compile 'mysql:mysql-connector-java:5.1.42'
+    compile 'com.baomidou:mybatis-plus-boot-starter:2.3.3'
+    compile 'com.alibaba:druid:1.1.10'
+    compile 'mysql:mysql-connector-java'
 
     compile 'io.dropwizard.metrics:metrics-core:3.1.4'
     compile 'org.jolokia:jolokia-core:1.3.6'
