--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -60,7 +60,7 @@ spring:
 
 #mybatis
 mybatis-plus:
-  mapper-locations: classpath*:/mapper/**/*.xml
+  mapper-locations: classpath:/mapper/**/*.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: com.xy.vmes.**
   typeEnumsPackage: com.xy.vmes.**
@@ -68,7 +68,6 @@ mybatis-plus:
     id-type: 2
     field-strategy: 2
     db-column-underline: true
-    refresh-mapper: false
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
