--- a/yvan-platform/build.gradle
+++ b/yvan-platform/build.gradle
@@ -8,23 +8,19 @@ bootRepackage {
 }
 
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.8'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8'
-    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.8'
-
-    compile 'org.springframework:spring-core:4.3.9.RELEASE'
+    compile 'com.fasterxml.jackson.core:jackson-core'
+    compile 'com.fasterxml.jackson.core:jackson-annotations'
+    compile 'com.fasterxml.jackson.core:jackson-databind'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda'
 
     compile 'joda-time:joda-time:2.9.9'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.8'
     compile 'commons-lang:commons-lang:2.6'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.5'
     compile 'commons-codec:commons-codec:1.10'
 
-    compile('org.springframework.boot:spring-boot-starter-web'){
-        exclude group: 'org.springframework.boot', module:'spring-boot-starter-tomcat'
-    }
+    compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-freemarker'
     compile 'org.springframework.boot:spring-boot-starter-cache'
     compile 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -34,14 +30,9 @@ dependencies {
     compile 'com.alibaba:druid:1.1.10'
     compile 'mysql:mysql-connector-java'
 
-    compile 'io.dropwizard.metrics:metrics-core:3.1.4'
-    compile 'org.jolokia:jolokia-core:1.3.6'
-
-    compile 'org.springframework:spring-aspects:4.3.9.RELEASE'
-
+    compile 'org.springframework:spring-aspects'
     compile 'com.google.guava:guava:19.0'
 
-    compile 'io.searchbox:jest:2.0.4'
     compile 'org.fusesource.jansi:jansi:1.17.1'
 
     compile 'com.auth0:java-jwt:3.2.0'
