--- a/yvan-platform/build.gradle
+++ b/yvan-platform/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     compile 'com.auth0:java-jwt:3.2.0'
     compile 'net.coobird:thumbnailator:0.4.8'
-    compile 'org.projectlombok:lombok:1.16.8'
+    compile 'org.projectlombok:lombok'
 
 
     compile 'org.apache.poi:poi:3.17'
