--- a/vmes-server/build.gradle
+++ b/vmes-server/build.gradle
@@ -4,4 +4,6 @@ dependencies {
 
     compile 'org.crazycake:shiro-redis:2.8.22'
     compile 'org.apache.shiro:shiro-spring:1.4.0'
+
+    compile 'org.codehaus.groovy:groovy-all:2.4.7'
 }
