--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -57,7 +57,16 @@ spring:
     maxOpenPreparedStatements: 20
     filters: stat,wall
 
-
+  activemq:
+     broker-url: tcp://116.196.105.79:61616
+     user: admin
+     password: admin
+     in-memory: true
+     pool:
+      enabled: true
+      max-connections: 5
+      idle-timeout: 30000
+      expiry-timeout: 0
 #mybatis
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
@@ -72,3 +81,5 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
+
+
