--- a/yvan-platform/build.gradle
+++ b/yvan-platform/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'org.springframework:spring-jms'
     compile 'org.apache.activemq:activemq-pool:5.12.1'
 
+    compile 'com.corundumstudio.socketio:netty-socketio:1.7.11'
 }
 
 artifacts {
