--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -67,16 +67,12 @@ spring:
     maxOpenPreparedStatements: 20
     filters: stat,wall
 
-  activemq:
-     broker-url: tcp://47.92.1.209:61616
-     user: admin
-     password: admin
-     in-memory: true
-     pool:
-      enabled: true
-      max-connections: 5
-      idle-timeout: 30000
-      expiry-timeout: 0
+  rabbitmq:
+      host: 47.92.1.209
+      port: 5672
+      username: guest
+      password: guest
+
 #mybatis
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
