--- a/vmes-server/src/main/resources/application-test.yml
+++ b/vmes-server/src/main/resources/application-test.yml
@@ -14,16 +14,16 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.93.44.177:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false
-    username: vmes
-    password: owi123Q@WE!
+    url: jdbc:mysql://47.92.1.209:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    username: root
+    password: agrvqL$D
 
   redis:
     key_prefix: vmes
-    host: 47.93.44.177
+    host: 47.92.1.209
     port: 6379
-    password: riw11119owow
+    password: agrvqL$D
     timeout: 0
     expire: 18000
 
-ui-path: file:/home/vmes/htdocs/vmes.deecoop.cn
+ui-path: file:./vmes-file
