--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -81,6 +81,15 @@ spring:
       #port: 465 使用端口范围[1025-65534]
       protocol: smtp #邮件协议 smtp
       default-encoding: UTF-8
+  properties:
+    mail:
+    smtp:
+     # 邮件接收时间的限制，单位毫秒
+     timeout: 10000
+     # 连接时间的限制，单位毫秒
+     connectiontimeout: 10000
+     # 邮件发送时间的限制，单位毫秒
+     writetimeout: 10000
 
 #mybatis
 mybatis-plus:
