--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -77,8 +77,8 @@ spring:
       host: smtp.163.com #smtp服务器主机 smtp.163.com
       username: chen_gang7906@163.com  #邮箱账号 #邮箱账号@163.com
       password: wdmzjcg790412 #邮箱账号密码或者第三方登录授权码 (邮箱账号密码:wdmzjcg79 第三方授权码:wdmzjcg790412)
-      port: 25
-      #port: 465 使用端口范围[1025-65534]
+      #port: 25 #本地测使用端口:25
+      port: 1030 #真实环境使用端口:1030 使用端口范围[1025-65534]
       protocol: smtp #邮件协议 smtp
       default-encoding: UTF-8
 
