--- a/vmes-server/src/main/resources/application.yml
+++ b/vmes-server/src/main/resources/application.yml
@@ -78,9 +78,13 @@ spring:
       username: chen_gang7906@163.com  #邮箱账号 #邮箱账号@163.com
       password: wdmzjcg790412 #第三方登录授权码-必须使用授权码 (第三方授权码:wdmzjcg790412)
       #port: 25 #本地测使用端口:25
-      port: 587 #真实使用端口:587
+      port: 465 #真实使用端口:465
       protocol: smtp #邮件协议 smtp
       default-encoding: UTF-8
+
+      properties.mail.smtp.starttls.enable: true
+      properties.mail.smtp.starttls.required: true
+      properties.mail.smtp.ssl.enable: true
 
 #mybatis
 mybatis-plus:
