--- a/vmes-server/src/main/resources/application-dev.yml
+++ b/vmes-server/src/main/resources/application-dev.yml
@@ -14,8 +14,8 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.92.1.209:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
-    username: root
+    url: jdbc:mysql://rm-8vbjns8g515bo16crvo.mysql.zhangbei.rds.aliyuncs.com:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+    username: vmes
     password: agrvqL$D
 
   redis:
