--- a/vmes-server/src/main/resources/application-dev.yml
+++ b/vmes-server/src/main/resources/application-dev.yml
@@ -18,16 +18,19 @@ spring:
     #外网主机: rm-8vbjns8g515bo16crvo.mysql.zhangbei.rds.aliyuncs.com
     #内网主机: rm-8vbjns8g515bo16cr.mysql.zhangbei.rds.aliyuncs.com
 
-    # url: jdbc:mysql://rm-8vbjns8g515bo16crvo.mysql.zhangbei.rds.aliyuncs.com:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true #
-    url: jdbc:mysql://rm-8vbjns8g515bo16cr.mysql.zhangbei.rds.aliyuncs.com:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
-    username: vmes
-    password: agrvqL$D
+#    url: jdbc:mysql://rm-8vbjns8g515bo16crvo.mysql.zhangbei.rds.aliyuncs.com:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+#    # url: jdbc:mysql://rm-8vbjns8g515bo16cr.mysql.zhangbei.rds.aliyuncs.com:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+#    username: vmes
+#    password: agrvqL$D
+
+    url: jdbc:mysql://120.27.8.239:3306/deecoop?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+    username: root
+    password: 123456
 
   redis:
     key_prefix: vmes
-    host: 47.92.1.209
+    host: 120.27.8.239
     port: 6379
-    password: agrvqL$D
     timeout: 0
     expire: 18000
 
